# EduPath-AI

./: README.md  app.py  edupath_job.db  recommender.py  requirements.txt
EduPath AI/: app.py  pyproject.toml  requirements.txt
EduPath AI/static/: style.css
EduPath AI/templates/: dashboard.html  index.html  login.html  navbar.html  quiz_result.html  register.html  resume.html
forge/: app.py  edupath_job.db  job_api.py  requirements.txt
forge/static/: style.css
forge/templates/: dashboard.html  index.html  login.html  register.html
static/: style.css
templates/: history.html  index.html  resume_form.html  skill_quiz_dynamic.html  skill_quiz_input.html
