# pyproject.toml - Updated dependencies
[project]
name = "edupath_job"
version = "0.1.0"
description = "Combined EduPath and Job Recommender"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask",
    "openai>=1.84.0",
    "pymupdf>=1.26.0",
    "python-dotenv>=1.1.0",
    "apify-client>=1.10.0",
]